2011-04-05  Zoltan Horvath  <zoltan@webkit.org>

        Reviewed by Andreas Kling.

        [Qt] Make URL loader accessible from testbrowser's menus
        https://bugs.webkit.org/show_bug.cgi?id=57823

        Add "Load URLs from file" to QtTestBrowser's and to MiniBrowser's menu.

        * MiniBrowser/qt/BrowserWindow.cpp:
        (BrowserWindow::BrowserWindow):
        (BrowserWindow::loadURLListFromFile):
        (BrowserWindow::~BrowserWindow):
        * MiniBrowser/qt/BrowserWindow.h:
        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::LauncherWindow):
        (LauncherWindow::~LauncherWindow):
        (LauncherWindow::createChrome):
        (LauncherWindow::loadURLListFromFile):
        * QtTestBrowser/launcherwindow.h:

2011-04-04  Sam Weinig  <sam@webkit.org>

        Reviewed by Brian Weinstein.

        Remove duplicate API from WKContext
        <rdar://problem/8727879>
        https://bugs.webkit.org/show_bug.cgi?id=57815

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKit2/SendingMessagesToTheWebProcessBeforeItIsValid.cpp: Removed.
        * TestWebKitAPI/win/TestWebKitAPI.vcproj:
        Remove SendingMessagesToTheWebProcessBeforeItIsValid since the API it was testing is now removed.

2011-04-04  Tony Chang  <tony@chromium.org>

        Reviewed by Ojan Vafai.

        [chromium] don't write .checksum files if a fallback platform has an embedded checksum
        https://bugs.webkit.org/show_bug.cgi?id=57783

        * Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests.py:
        * Scripts/webkitpy/layout_tests/rebaseline_chromium_webkit_tests_unittest.py:

2011-04-04  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Unreviewed build fix, run uninstall when cleaning to remove built files
        from WebKitBuild.

        * Scripts/webkitdirs.pm:

2011-04-04  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Gustavo Noronha Silva.
